--- a/diane-game-engine/.classpath
+++ b/diane-game-engine/.classpath
@@ -6,22 +6,22 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="modules/lib-xio.module.jar">
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-images">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="modules/lib-storage.module.jar">
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-polynomial-table">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="modules/lib-images.module.jar">
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-storage">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="modules/lib-polynomial-table.module.jar">
+	<classpathentry combineaccessrules="false" kind="src" path="/lib-xio">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
